Fixed email list being too wide

--- a/src/components/mailList/mailList.scss
+++ b/src/components/mailList/mailList.scss
@@ -7,7 +7,9 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
 }
 
 .mailInputContainer>input{
